# robostereo

./: .gitignore  .pre-commit-config.yaml  .release-ignore  README.md  pyproject.toml  rd.py  upload_hf.py
IEPL/: .gitignore  README.md  pyproject.toml
IEPL/iepl_cosmos/: cosmos_reward.py  cosmos_rft_trainer.py  cosmos_wm_worker.py  main_cosmos_rft.py  mimicgen_video_dataset.py  vla_cosmos_bridge_rft.py
IEPL/iepl_cosmos/config/: cosmos_rft_grpo_trainer.yaml  cosmos_rft_grpo_trainer_2gpu_lowmem.yaml
IEPL/scripts/: docker_start_vla_cosmos.sh
IEPL/scripts/cosmos/: docker_run.sh  min_debug_cosmos_rft.sh  post_train_cosmos_rft.sh  post_train_cosmos_rft_2gpu.sh
IEPL/scripts/libero/: eval_libero.sh  post_train_rlvr.sh
IEPL/train/verl/: README.md  requirements.txt
IEPL/train/verl/docs/: hybrid_flow.rst
IEPL/train/verl/examples/grpo_trainer/: run_vla_rft.sh
IEPL/train/verl/verl/single_controller/base/: worker.py
IEPL/train/verl/verl/single_controller/ray/: base.py
IEPL/train/verl/verl/utils/: tokenizer.py
IEPL/train/verl/verl/utils/checkpoint/: fsdp_checkpoint_manager.py
IEPL/train/verl/verl/workers/: fsdp_workers.py
IEPL/train/verl/verl/workers/actor/: dp_actor.py
IEPL/train/verl/verl/workers/rollout/: hf_rollout.py
IEPL/train/verl/vla-adapter/openvla-oft/experiments/robot/: openvla_utils.py
IEPL/train/verl/vla-adapter/openvla-oft/experiments/robot/libero/: libero_utils.py  run_libero_eval.py
IEPL/train/verl/vla-adapter/openvla-oft/prismatic/models/: action_heads.py  projectors.py
IEPL/train/verl/vla-adapter/openvla-oft/prismatic/training/: train_utils.py
IEPL/train/verl/vla-adapter/openvla-oft/prismatic/vla/: constants.py
IEPL/train/verl/vla-adapter/openvla-oft/prismatic/vla/datasets/: datasets.py
IEPL/train/verl/vla-adapter/openvla-oft/prismatic/vla/datasets/rlds/utils/: data_utils.py
OEPL/: README.md  align.json  constraints.txt  inspect_rollout.py  install.sh  requirements.txt
OEPL/reward_model/: find_thre.py  inference_videomae.py  videomae.py
OEPL/scripts/: bootstrap_wm_vla copy.sh  bootstrap_wm_vla.sh  compare_cosmos_world_alignment.py  convert_oepl_to_bridge.py  cosmos_preview_sync.py  eval_openvla_with_cosmos.py  run_conda_vla_sync.sh  run_docker_cosmos_sync.sh  run_oepl_vla_with_cosmos_wm.py  run_vla_cosmos_interact.sh  run_vla_sim_eval.sh  run_vla_sim_rollout.sh  self_check_oepl_runtime.sh  sync_protocol.py  vla_cosmos_bridge.py  vla_sim_cosmos_rollout.py  vla_sim_eval.py  vla_sim_eval_sync.py  vla_sim_rollout.py
OEPL/verl/: protocol.py
TTPA/: README.md  cosmos_preview_sync.py  qwen_scorer.py  run_conda_vla_sync.sh  run_docker_cosmos_sync.sh  sync_protocol.py  vla_sim_eval_sync.py
cosmos_predict2/: action_conditioned.py  action_conditioned_config.py  robot_multiview.py  robot_multiview_config.py
cosmos_predict2/examples/: visualize_features.py
examples/: action_conditioned.py  action_conditioned_batch4.py  action_conditioned_dual.py
gs_head/: README.md
gs_head/scripts/: gs_from_xyz_depth.py  gs_from_xyz_frame.py  gs_from_xyz_video.py  run_da3_first_frame.py  (+5 more)
rewards/: .gitignore  README.md  test_rewards.py
scripts/: convert.sh  convert_distcp_to_pt.py  prepare_batch_input_json.py  train.py
(+106 files in other folders)
