# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iepl"
version = "0.1.0"
authors = [
  {name = "NVIDIA Corporation"},
]
description = "IEPL (Imitative-Evolutionary Policy Learning) - Cosmos-RFT training with Cosmos world model"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# [modification] Added draccus and local openvla-oft
dependencies = [
  "cosmos-oss==0.1.0",
  "timm==0.9.10",
  "sentencepiece>=0.2.1",
  "transformers==4.51.3",
  "ml-dtypes>=0.5.3",
  "protobuf>=6.33.0",
  "draccus>=0.8.0",
  "jsonlines",
  "ray",
  "tensordict",
  "codetiming==1.4.0",
  "h5py==3.15.1",
  "json_numpy==2.1.1"
]

[project.optional-dependencies]
gradio = ["cosmos-oss[gradio]"]
cu128 = ["cosmos-oss[cu128_torch27]"]
cu130 = ["cosmos-oss[cu130_torch29]"]

[dependency-groups]
dev = ["cosmos-oss[dev,gradio]"]

[project.readme]
path = "README.md"
content-type = "text/markdown"

[project.urls]
repository = "https://github.com/nvidia-cosmos/cosmos-predict2"

[tool.uv]
conflicts = [
  [{extra = "cu128"}, {extra = "cu129"}, {extra = "cu130"}],
]
override-dependencies = ["numpy>=2.0.0"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cosmos-oss = [{ workspace = true }]

# [config] Allow direct file:// and git+https references
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "cosmos_predict2/__about__.py"

[tool.hatch.build.targets.sdist]
packages = [
  "cosmos_predict2",
]
include = [
  "sitecustomize.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "cosmos_predict2",
]
include = [
  "sitecustomize.py",
]
exclude = [
  "*_test.py",
]

[tool.coverage.run]
parallel = true
concurrency = ["thread", "multiprocessing"]
source = ["cosmos_predict2"]
sigterm = true

[tool.coverage.paths]
source = [
  "cosmos_predict2/",
  "*/site-packages/cosmos_predict2/",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
]